--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src --ext .js,.vue",
+    "lint:fix": "eslint src --ext .js,.vue --fix"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
@@ -17,6 +19,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "eslint-plugin-vue": "10.0.0",
+    "eslint-plugin-vuetify": "2.5.1",
+    "vite-plugin-checker": "0.9.0",
+    "vite-plugin-vuetify": "2.1.0",
+    "vue-i18n": "10.0.6",
+    "eslint": "9.21.0"
   }
 }
