--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,23 @@
 {
-    "dependencies": {
-        "cors": "^2.8.5",
-        "express": "^4.21.2",
-        "nodemon": "^3.1.9",
-        "path": "^0.12.7"
-    },
-    "name": "home-maganer",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "dev": "nodemon server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "description": ""
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.12.1",
+    "nodemon": "^3.1.9",
+    "path": "^0.12.7"
+  },
+  "name": "home-maganer",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon NODE_ENV=development node server.js",
+    "release": "NODE_ENV=release node server.js",
+    "master": "NODE_ENV=production node server.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
