--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,20 +11,21 @@
     "lint:fix": "eslint src --ext .js,.vue --fix"
   },
   "dependencies": {
-    "@mdi/font": "^7.4.47",
-    "axios": "^1.8.2",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "vuetify": "^3.7.15"
+    "@mdi/font": "7.4.47",
+    "axios": "1.8.2",
+    "pinia": "3.0.1",
+    "vue": "3.5.13",
+    "vue-router": "4.5.0",
+    "vuetify": "3.7.15"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.2.0",
+    "@vitejs/plugin-vue": "5.2.1",
+    "eslint": "9.21.0",
     "eslint-plugin-vue": "10.0.0",
     "eslint-plugin-vuetify": "2.5.1",
+    "vite": "6.2.0",
     "vite-plugin-checker": "0.9.0",
     "vite-plugin-vuetify": "2.1.0",
-    "vue-i18n": "10.0.6",
-    "eslint": "9.21.0"
+    "vue-i18n": "10.0.6"
   }
 }
