--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"yarn vite\" \"cd ../backend && yarn dev\"",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext .js,.vue",
@@ -13,13 +13,16 @@
   "dependencies": {
     "@mdi/font": "7.4.47",
     "axios": "1.8.2",
+    "chart.js": "4.4.8",
     "pinia": "3.0.1",
     "vue": "3.5.13",
+    "vue-chartjs": "5.3.2",
     "vue-router": "4.5.0",
     "vuetify": "3.7.15"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "5.2.1",
+    "concurrently": "9.1.2",
     "eslint": "9.21.0",
     "eslint-plugin-vue": "10.0.0",
     "eslint-plugin-vuetify": "2.5.1",
