--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "bcryptjs": "3.0.2",
     "cors": "2.8.5",
+    "dayjs": "1.11.13",
     "dotenv": "16.4.7",
     "express": "4.21.2",
     "jsonwebtoken": "9.0.2",
+    "module-alias": "2.2.3",
     "mongoose": "8.12.1",
     "nodemailer": "6.10.0",
     "nodemon": "3.1.9",
@@ -20,5 +22,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "_moduleAliases": {
+    "@": "./"
+  }
 }
