--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,23 +12,25 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
-    "axios": "1.8.2",
-    "chart.js": "4.4.8",
-    "pinia": "3.0.1",
+    "axios": "1.8.4",
+    "chart.js": "4.4.9",
+    "dayjs": "1.11.13",
+    "pinia": "3.0.2",
     "vue": "3.5.13",
     "vue-chartjs": "5.3.2",
     "vue-router": "4.5.0",
     "vuetify": "3.8.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "5.2.1",
+    "@vitejs/plugin-vue": "5.2.3",
     "concurrently": "9.1.2",
-    "eslint": "9.21.0",
+    "eslint": "9.24.0",
     "eslint-plugin-vue": "10.0.0",
-    "eslint-plugin-vuetify": "2.5.1",
-    "vite": "6.2.0",
-    "vite-plugin-checker": "0.9.0",
-    "vite-plugin-vuetify": "2.1.0",
-    "vue-i18n": "10.0.6"
+    "eslint-plugin-vuetify": "2.5.2",
+    "vite": "6.2.6",
+    "vite-plugin-checker": "0.9.1",
+    "vite-plugin-vuetify": "2.1.1",
+    "vue-eslint-parser": "10.1.3",
+    "vue-i18n": "11.1.3"
   }
 }
