--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "mongoose": "8.12.1",
     "nodemailer": "6.10.0",
     "nodemon": "3.1.9",
-    "path": "0.12.7"
+    "path": "0.12.7",
+    "uuid": "^11.1.0"
   },
   "name": "home-maganer",
   "type": "module",
