--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"yarn vite\" \"cd ../backend && yarn dev\"",
-    "build": "vite build",
+    "build-dev": "vite build --mode development",
+    "build-rc": "vite build --mode release",
+    "build": "vite build --mode production",
     "preview": "vite preview",
     "lint": "eslint src --ext .js,.vue",
     "lint:fix": "eslint src --ext .js,.vue --fix"
