--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-vuetify": "2.5.2",
     "vite": "6.3.2",
     "vite-plugin-checker": "0.9.1",
+    "vite-plugin-static-copy": "^3.0.0",
     "vite-plugin-vuetify": "2.1.1",
     "vue-eslint-parser": "10.1.3",
     "vue-i18n": "11.1.3"
