--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -5,6 +5,7 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment: develop 
 
     steps:
       - name: Checkout código
@@ -13,7 +14,7 @@ jobs:
       - name: Instalar Node.js
         uses: actions/setup-node@v4
         with: 
-            node-version: 18
+          node-version: 18
 
       - name: Instalar dependências
         working-directory: ./frontend
