--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -20,6 +20,12 @@ jobs:
         working-directory: ./frontend
         run: yarn
 
+      - name: Rodar testes E2E
+        working-directory: ./frontend
+        run: yarn test:ci
+        env:
+          CYPRESS_ENV: develop
+
       - name: Build (modo development)
         working-directory: ./frontend
         run: yarn build-dev && cp dist/index.html dist/404.html
