--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,9 @@
     "preview": "vite preview",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "test:e2e": "start-server-and-test dev http://localhost:5173 cy:run",
-    "test:ci": "CYPRESS_ENV=code yarn test:e2e"
+    "test:e2e-local": "start-server-and-test dev http://localhost:5173 cy:run",
+    "test:e2e": "start-server-and-test preview http://localhost:5173 cy:run",
+    "test:ci": "CYPRESS_ENV=development yarn test:e2e"
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
