--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "test:e2e-local": "start-server-and-test dev http://localhost:5173 cy:run",
-    "test:e2e": "start-server-and-test preview http://localhost:5173 cy:run",
+    "test:e2e": "start-server-and-test preview --mode development http://localhost:4173/ cy:run",
     "test:ci": "CYPRESS_ENV=development yarn test:e2e"
   },
   "dependencies": {
