--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@vitejs/plugin-vue": "5.2.3",
     "concurrently": "9.1.2",
     "cypress": "^14.4.0",
+    "cypress-real-events": "^1.14.0",
     "dotenv": "^16.5.0",
     "eslint": "9.24.0",
     "eslint-plugin-vue": "10.0.0",
