adicionando comando alterativo

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon NODE_ENV=development node server.js",
     "release": "NODE_ENV=release node server.js",
     "master": "NODE_ENV=production node server.js",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules NODE_ENV=development jest"
+    "test-local": "cross-env NODE_OPTIONS=--experimental-vm-modules NODE_ENV=development jest",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "author": "Gabriel Lopes Weber",
   "license": "ISC",
