--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -37,6 +37,7 @@ jobs:
         env:
           MONGO_URL: mongodb://localhost:27017/homemanager_test
           CI: true
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
         run: yarn test
 
       ### ⬇️ FRONTEND: TESTES, BUILD E DEPLOY
