mesclando develop para release (#3)
* Removendo consoles

* adicionando dist novamente no gitignore

* para testar o gh-pages

* testando gh-pages

* Forçando reexecução do deploy develop

* testes

* resolvendo problema com imports

* tentando resolver problema com build

* Resolvendo problemas de uso de arquivo

* corrigindo DashboardService

* Forçando reexecução do deploy develop

* testando api

* ajustes para ambientes

* Aprimoramentos

* Ajustando envs

* Corrigindo deploy

* Adionando vite-plugin-static-copy

* adicionando roteamento dinamico

* Testando correção de uso das imagens

* Testando correção de uso das imagens

* Adicionando elevation pendente em cards de login para padronização

* Melhoria no envio de e-mail e tentativa de solução do 404 no git e adicionado demais deploys

* adicionando environment

* adicionando testes

* Subindo teste funcional de registro, login e configurado o cyexpress

* Alterando deploy de teste

* testando testes com deploy

* teste

* caracter a mais

* Adicionando logs no backend para testes

* alterando para localhost5173

* testando

* Adicionando categorias quando um usuario for cadastrado

* Adicionando mais testes

* Adicionado teste de lançamentos

* Adicionado testes em backend de autenticação

* testando testes em deploy para backend

* adicionando condição para nao utilizar @shelf/jest-mongodb

* adicionando condição para nao utilizar @shelf/jest-mongodb

* testes

* mais testes

* mais testes

* preset dinamico

* adicionando comando alterativo

* testando

* aprimoramento do teste

* Mudando para MONGO_URL

* adicionando secret

* Atualizando documentação do projeto

--- a/.gitignore
+++ b/.gitignore
@@ -27,11 +27,12 @@ frontend/dist/
 
 # Testes e cobertura de código
 coverage/
-cypress/videos/
-cypress/screenshots/
-jest/
+frontend/cypress/videos/
+frontend/cypress/screenshots/
+backend/jest/
 
 # Envs
 .env.development
 .env.release
 .env.production
+.env.code
