--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,18 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"yarn vite\" \"cd ../backend && yarn dev\"",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint src --ext .js,.vue",
-    "lint:fix": "eslint src --ext .js,.vue --fix"
+    "dev": "concurrently \"yarn vite --mode code\" \"cd ../backend && yarn dev\"",
+    "dev-ci": "yarn vite --mode code",
+    "build-dev": "vite build --mode development",
+    "build-release": "vite build --mode release",
+    "build-prod": "vite build --mode production",
+    "build-code": "vite build --mode code",
+    "preview": "vite preview --mode code",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "test:e2e-local": "start-server-and-test dev http://localhost:5173 cy:run",
+    "test:e2e-ci": "start-server-and-test dev-ci http://localhost:5173 cy:run",
+    "test:ci": "CYPRESS_ENV=development yarn test:e2e-ci"
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
@@ -24,11 +31,16 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "5.2.3",
     "concurrently": "9.1.2",
+    "cypress": "^14.4.0",
+    "cypress-real-events": "^1.14.0",
+    "dotenv": "^16.5.0",
     "eslint": "9.24.0",
     "eslint-plugin-vue": "10.0.0",
     "eslint-plugin-vuetify": "2.5.2",
+    "start-server-and-test": "^2.0.12",
     "vite": "6.3.2",
     "vite-plugin-checker": "0.9.1",
+    "vite-plugin-static-copy": "^3.0.0",
     "vite-plugin-vuetify": "2.1.1",
     "vue-eslint-parser": "10.1.3",
     "vue-i18n": "11.1.3"
