--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    environment: master
+    environment: production
 
     services:
       mongodb:
@@ -25,7 +25,7 @@ jobs:
       - name: Instalar Node.js
         uses: actions/setup-node@v4
         with: 
-            node-version: 18
+          node-version: 18
 
       ### ⬇️ TESTES DO BACKEND
       - name: Instalar dependências backend
