--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "1.8.4",
     "chart.js": "4.4.9",
     "dayjs": "1.11.13",
+    "jwt-decode": "^4.0.0",
     "pinia": "3.0.2",
     "vue": "3.5.13",
     "vue-chartjs": "5.3.2",
